--- a/web/src/main/resources/mail.properties
+++ b/web/src/main/resources/mail.properties
@@ -1,7 +1,7 @@
 mail.smtp.host=smtp.gmail.com
 mail.smtp.port=465
-mail.smtp.user=karina.cherehovich@gmail.com
-mail.smtp.password=LaserJet2000
+mail.smtp.user=
+mail.smtp.password=
 mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 mail.smtp.auth=true
 mail.smtp.ssl.enable=true
