--- a/web/src/main/resources/message.properties
+++ b/web/src/main/resources/message.properties
@@ -119,7 +119,7 @@ user.wasChangedPassword=Password changed
 modal.changePassword.incorrectOldPassword=Incorrect old password
 event.wasSuccessUpdate=Information about the event has been updated
 event.UpdateTitle=Update event
-eventEdit.warnMessage=Create property
+eventEdit.warnMessage=Data entered in the wrong format
 event.name=Event:
 user.fullName=User:
 message.text=Text:
@@ -155,4 +155,11 @@ button.unblocked=Unblockedty
 user.state=State:
 text.ticketUnSuccessSale=Create property
 ticketSale.noDatesAvailable=There are currently no dates available, follow the announcements on the site.
+header.title.first=We offer
+header.title.second=holding holidays for you and your children
+ticket.number=№
+ticket.date=Date:
+ticket.eventName=Event name:
+ticket.count=Count:
+ticket.state=State:
 
